--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,9 @@
     "from scapy.all import * \n",
     "from scapy.all import ICMP, IP\n",
     "import time\n",
-    "import statistics"
+    "import statistics\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -18,18 +20,20 @@
    "id": "a2677e2b",
    "metadata": {},
    "source": [
-    "Creamos una función ping que envía echo_request al host pasado por parámetro. La función devuelve un diccionario que contiene la siguiente información:\n",
+    "Creamos una función ping que envía echo request al host pasado por parámetro. La función devuelve un diccionario que contiene la siguiente información:\n",
     "\n",
     "* dst: Host contactado\n",
-    "* response: True si se obtuvo respuesta; False en caso contrario\n",
-    "* rtt_us: RTT en milisegundos (None si no se obtuvo respuesta)\n",
-    "* len: Longitud del paquete recibido (None si no se obtuvo respuesta)\n",
-    "* ttl: Time to live del paquete recibido (None si no se obtuvo respuesta)\n"
+    "* response_type: Tipo de respuesta ICMP*\n",
+    "* rtt_us: RTT en milisegundos*\n",
+    "* len: Longitud del paquete recibido*\n",
+    "* ttl: Time to live del paquete recibido*\n",
+    "\n",
+    "$\\textit{* None}$ si no se obtuvo respuesta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "b2542d34",
    "metadata": {},
    "outputs": [],
@@ -91,40 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "3fe15a6f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'dst': 'utdt.edu.ar',\n",
-       " 'response_type': 0,\n",
-       " 'rtt_ms': 89.59221839904785,\n",
-       " 'len': 28,\n",
-       " 'ttl': 56}"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ping('utdt.edu.ar')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "b154d3de",
    "metadata": {},
    "outputs": [],
@@ -143,8 +114,6 @@
     "    for i in range(cantidad_paquetes):\n",
     "\n",
     "        resultado = ping(host)\n",
-    "\n",
-    "        # print(resultado) # podemos descomentar para ver el resultado de cada ping\n",
     "\n",
     "        if resultado[\"response_type\"] == 0: \n",
     "            received_packets += 1\n",
@@ -171,6 +140,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "22445bf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'dst': 'utdt.edu.ar',\n",
+       " 'response_type': 0,\n",
+       " 'rtt_ms': 79.1928768157959,\n",
+       " 'len': 28,\n",
+       " 'ttl': 56}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ping('utdt.edu.ar')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c1b20695",
    "metadata": {},
@@ -180,7 +182,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
+   "id": "25497061",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n",
+      "Pinging utdt.edu.ar...\n",
+      "Echo-reply recibida de utdt.edu.ar\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'utdt.edu.ar',\n",
+       " 'Paquetes enviados': 5,\n",
+       " 'Paquetes recibidos': 5,\n",
+       " 'Paquetes perdidos': 0,\n",
+       " 'Porcentaje de paquetes perdidos': 0.0,\n",
+       " 'RTT total': 88.81855010986328,\n",
+       " 'RTT mínimo': 13.510704040527344,\n",
+       " 'RTT máximo': 26.273012161254883,\n",
+       " 'RTT promedio': 17.763710021972656,\n",
+       " 'Desvió estándar del RTT promedio': 5.584849294006135}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ping_multiple('utdt.edu.ar', 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "aca12d28",
    "metadata": {},
    "outputs": [
@@ -208,14 +256,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 1330.6891918182373,\n",
-       " 'RTT mínimo': 238.00396919250488,\n",
-       " 'RTT máximo': 286.32116317749023,\n",
-       " 'RTT promedio': 266.13783836364746,\n",
-       " 'Desvió estándar del RTT promedio': 19.66670569347078}"
+       " 'RTT total': 220.15833854675293,\n",
+       " 'RTT mínimo': 41.71562194824219,\n",
+       " 'RTT máximo': 47.69563674926758,\n",
+       " 'RTT promedio': 44.031667709350586,\n",
+       " 'Desvió estándar del RTT promedio': 2.2269579775806285}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "01964b2e",
    "metadata": {},
    "outputs": [
@@ -254,14 +302,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 238.26193809509277,\n",
-       " 'RTT mínimo': 35.05897521972656,\n",
-       " 'RTT máximo': 58.90989303588867,\n",
-       " 'RTT promedio': 47.652387619018555,\n",
-       " 'Desvió estándar del RTT promedio': 8.625890055580863}"
+       " 'RTT total': 78.2005786895752,\n",
+       " 'RTT mínimo': 12.216329574584961,\n",
+       " 'RTT máximo': 19.249677658081055,\n",
+       " 'RTT promedio': 15.640115737915039,\n",
+       " 'Desvió estándar del RTT promedio': 2.6951080715652105}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "e3bb0ec7",
    "metadata": {},
    "outputs": [
@@ -300,14 +348,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 1900.3939628601074,\n",
-       " 'RTT mínimo': 325.06704330444336,\n",
-       " 'RTT máximo': 538.5589599609375,\n",
-       " 'RTT promedio': 380.0787925720215,\n",
-       " 'Desvió estándar del RTT promedio': 89.67579550472396}"
+       " 'RTT total': 1726.0704040527344,\n",
+       " 'RTT mínimo': 311.37752532958984,\n",
+       " 'RTT máximo': 464.94531631469727,\n",
+       " 'RTT promedio': 345.2140808105469,\n",
+       " 'Desvió estándar del RTT promedio': 67.01958398827482}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "cf0b1573",
    "metadata": {},
    "outputs": [
@@ -333,7 +381,7 @@
       "Pinging cuhk.edu.cn...\n",
       "Echo-reply recibida de cuhk.edu.cn\n",
       "Pinging cuhk.edu.cn...\n",
-      "No se recibió respuesta de cuhk.edu.cn\n",
+      "Echo-reply recibida de cuhk.edu.cn\n",
       "Pinging cuhk.edu.cn...\n",
       "Echo-reply recibida de cuhk.edu.cn\n"
      ]
@@ -343,17 +391,17 @@
       "text/plain": [
        "{'host': 'cuhk.edu.cn',\n",
        " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 4,\n",
-       " 'Paquetes perdidos': 1,\n",
-       " 'Porcentaje de paquetes perdidos': 0.2,\n",
-       " 'RTT total': 1431.286334991455,\n",
-       " 'RTT mínimo': 322.9548931121826,\n",
-       " 'RTT máximo': 435.84418296813965,\n",
-       " 'RTT promedio': 357.82158374786377,\n",
-       " 'Desvió estándar del RTT promedio': 52.4545285283615}"
+       " 'Paquetes recibidos': 5,\n",
+       " 'Paquetes perdidos': 0,\n",
+       " 'Porcentaje de paquetes perdidos': 0.0,\n",
+       " 'RTT total': 1586.1468315124512,\n",
+       " 'RTT mínimo': 315.85192680358887,\n",
+       " 'RTT máximo': 318.89843940734863,\n",
+       " 'RTT promedio': 317.22936630249023,\n",
+       " 'Desvió estándar del RTT promedio': 1.0923178177955848}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "5c3e294f",
    "metadata": {},
    "outputs": [
@@ -392,14 +440,14 @@
        " 'Paquetes recibidos': 5,\n",
        " 'Paquetes perdidos': 0,\n",
        " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 148.4239101409912,\n",
-       " 'RTT mínimo': 23.12493324279785,\n",
-       " 'RTT máximo': 42.3431396484375,\n",
-       " 'RTT promedio': 29.684782028198242,\n",
-       " 'Desvió estándar del RTT promedio': 7.50662480645388}"
+       " 'RTT total': 86.65609359741211,\n",
+       " 'RTT mínimo': 15.101432800292969,\n",
+       " 'RTT máximo': 18.94545555114746,\n",
+       " 'RTT promedio': 17.331218719482422,\n",
+       " 'Desvió estándar del RTT promedio': 1.8552017037511064}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "td6",
    "language": "python",
    "name": "python3"
   },
@@ -425,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
