borro imports que no usamos en imp.ipynb

--- a/imp.ipynb
+++ b/imp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e6b0b55c",
    "metadata": {},
    "outputs": [],
@@ -10,9 +10,7 @@
     "from scapy.all import * \n",
     "from scapy.all import ICMP, IP\n",
     "import time\n",
-    "import statistics\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import statistics"
    ]
   },
   {
