--- a/imp.ipynb
+++ b/imp.ipynb
@@ -18,15 +18,13 @@
    "id": "a2677e2b",
    "metadata": {},
    "source": [
-    "Creamos una función ping que envía echo request al host pasado por parámetro. La función devuelve un diccionario que contiene la siguiente información:\n",
+    "Creamos una función ping que envía echo request al host pasado por parámetro. La función devuelve un diccionario que contiene el host contactado (dst) y:\n",
+    "* Tipo de respuesta ICMP recibida (response_type)\n",
+    "* RTT en milisegundos (rtt_ms)\n",
+    "* Longitud del paquete recibido (len)\n",
+    "* Time to live del paquete recibido (ttl) \n",
     "\n",
-    "* dst: Host contactado\n",
-    "* response_type: Tipo de respuesta ICMP*\n",
-    "* rtt_us: RTT en milisegundos*\n",
-    "* len: Longitud del paquete recibido*\n",
-    "* ttl: Time to live del paquete recibido*\n",
-    "\n",
-    "$\\textit{* None}$ si no se obtuvo respuesta"
+    "El valor para estas claves es None si no se obtuvo respuesta."
    ]
   },
   {
@@ -139,33 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "22445bf0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'dst': 'utdt.edu.ar',\n",
-       " 'response_type': 0,\n",
-       " 'rtt_ms': 79.1928768157959,\n",
-       " 'len': 28,\n",
-       " 'ttl': 56}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ping('utdt.edu.ar')"
    ]
@@ -180,276 +155,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "25497061",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n",
-      "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n",
-      "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n",
-      "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n",
-      "Pinging utdt.edu.ar...\n",
-      "Echo-reply recibida de utdt.edu.ar\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'host': 'utdt.edu.ar',\n",
-       " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 5,\n",
-       " 'Paquetes perdidos': 0,\n",
-       " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 88.81855010986328,\n",
-       " 'RTT mínimo': 13.510704040527344,\n",
-       " 'RTT máximo': 26.273012161254883,\n",
-       " 'RTT promedio': 17.763710021972656,\n",
-       " 'Desvió estándar del RTT promedio': 5.584849294006135}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ping_multiple('utdt.edu.ar', 5)\n"
+    "ping_multiple('utdt.edu.ar', 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "aca12d28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging mit.edu...\n",
-      "Echo-reply recibida de mit.edu\n",
-      "Pinging mit.edu...\n",
-      "Echo-reply recibida de mit.edu\n",
-      "Pinging mit.edu...\n",
-      "Echo-reply recibida de mit.edu\n",
-      "Pinging mit.edu...\n",
-      "Echo-reply recibida de mit.edu\n",
-      "Pinging mit.edu...\n",
-      "Echo-reply recibida de mit.edu\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'host': 'mit.edu',\n",
-       " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 5,\n",
-       " 'Paquetes perdidos': 0,\n",
-       " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 220.15833854675293,\n",
-       " 'RTT mínimo': 41.71562194824219,\n",
-       " 'RTT máximo': 47.69563674926758,\n",
-       " 'RTT promedio': 44.031667709350586,\n",
-       " 'Desvió estándar del RTT promedio': 2.2269579775806285}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ping_multiple('mit.edu', 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "01964b2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging ie.edu...\n",
-      "Echo-reply recibida de ie.edu\n",
-      "Pinging ie.edu...\n",
-      "Echo-reply recibida de ie.edu\n",
-      "Pinging ie.edu...\n",
-      "Echo-reply recibida de ie.edu\n",
-      "Pinging ie.edu...\n",
-      "Echo-reply recibida de ie.edu\n",
-      "Pinging ie.edu...\n",
-      "Echo-reply recibida de ie.edu\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'host': 'ie.edu',\n",
-       " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 5,\n",
-       " 'Paquetes perdidos': 0,\n",
-       " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 78.2005786895752,\n",
-       " 'RTT mínimo': 12.216329574584961,\n",
-       " 'RTT máximo': 19.249677658081055,\n",
-       " 'RTT promedio': 15.640115737915039,\n",
-       " 'Desvió estándar del RTT promedio': 2.6951080715652105}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ping_multiple('ie.edu', 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e3bb0ec7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging sydney.edu.au...\n",
-      "Echo-reply recibida de sydney.edu.au\n",
-      "Pinging sydney.edu.au...\n",
-      "Echo-reply recibida de sydney.edu.au\n",
-      "Pinging sydney.edu.au...\n",
-      "Echo-reply recibida de sydney.edu.au\n",
-      "Pinging sydney.edu.au...\n",
-      "Echo-reply recibida de sydney.edu.au\n",
-      "Pinging sydney.edu.au...\n",
-      "Echo-reply recibida de sydney.edu.au\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'host': 'sydney.edu.au',\n",
-       " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 5,\n",
-       " 'Paquetes perdidos': 0,\n",
-       " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 1726.0704040527344,\n",
-       " 'RTT mínimo': 311.37752532958984,\n",
-       " 'RTT máximo': 464.94531631469727,\n",
-       " 'RTT promedio': 345.2140808105469,\n",
-       " 'Desvió estándar del RTT promedio': 67.01958398827482}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ping_multiple('sydney.edu.au', 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cf0b1573",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging cuhk.edu.cn...\n",
-      "Echo-reply recibida de cuhk.edu.cn\n",
-      "Pinging cuhk.edu.cn...\n",
-      "Echo-reply recibida de cuhk.edu.cn\n",
-      "Pinging cuhk.edu.cn...\n",
-      "Echo-reply recibida de cuhk.edu.cn\n",
-      "Pinging cuhk.edu.cn...\n",
-      "Echo-reply recibida de cuhk.edu.cn\n",
-      "Pinging cuhk.edu.cn...\n",
-      "Echo-reply recibida de cuhk.edu.cn\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'host': 'cuhk.edu.cn',\n",
-       " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 5,\n",
-       " 'Paquetes perdidos': 0,\n",
-       " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 1586.1468315124512,\n",
-       " 'RTT mínimo': 315.85192680358887,\n",
-       " 'RTT máximo': 318.89843940734863,\n",
-       " 'RTT promedio': 317.22936630249023,\n",
-       " 'Desvió estándar del RTT promedio': 1.0923178177955848}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ping_multiple('cuhk.edu.cn', 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5c3e294f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinging uniben.edu...\n",
-      "Echo-reply recibida de uniben.edu\n",
-      "Pinging uniben.edu...\n",
-      "Echo-reply recibida de uniben.edu\n",
-      "Pinging uniben.edu...\n",
-      "Echo-reply recibida de uniben.edu\n",
-      "Pinging uniben.edu...\n",
-      "Echo-reply recibida de uniben.edu\n",
-      "Pinging uniben.edu...\n",
-      "Echo-reply recibida de uniben.edu\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'host': 'uniben.edu',\n",
-       " 'Paquetes enviados': 5,\n",
-       " 'Paquetes recibidos': 5,\n",
-       " 'Paquetes perdidos': 0,\n",
-       " 'Porcentaje de paquetes perdidos': 0.0,\n",
-       " 'RTT total': 86.65609359741211,\n",
-       " 'RTT mínimo': 15.101432800292969,\n",
-       " 'RTT máximo': 18.94545555114746,\n",
-       " 'RTT promedio': 17.331218719482422,\n",
-       " 'Desvió estándar del RTT promedio': 1.8552017037511064}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ping_multiple('uniben.edu', 5)"
    ]
